--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,7 +94,7 @@ dependencies {
 
     // data store
     implementation "androidx.datastore:datastore-preferences:1.0.0"
-//    implementation "androidx.datastore:datastore-preferences-core:1.0.0"
+    implementation "androidx.datastore:datastore-preferences-core:1.0.0"
 
     // retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
