--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,9 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
+    // constraintLayout
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0"
+
     // Compose dependencies
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0-alpha01"
     implementation "androidx.navigation:navigation-compose:2.5.0-alpha01"
