--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:usesCleartextTraffic="true"
-        android:supportsRtl="true"
+        android:supportsRtl="false"
         android:theme="@style/Theme.App.Splash">
         <activity
             android:name=".presentation.ui.MainActivity"
